Dark Mode: fix structure control color

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -693,6 +693,10 @@ $devices: 'desktop', 'tablet', 'mobile';
 			}
 		}
 	}
+
+	.elementor-control-structure-reset {
+		border-top-color: $theme-dark-gray-darkest;
+	}
 }
 
 //Section Control
